--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,5 +1,13 @@
+# Build stage
+FROM node:18-alpine AS build
+
+WORKDIR /app
+COPY package*.json ./
+RUN npm install
+COPY . .
+
 # Development stage
-FROM node:18-alpine as development
+FROM node:18-alpine AS development
 
 WORKDIR /app
 COPY package*.json ./
@@ -8,3 +16,14 @@ COPY . .
 
 EXPOSE 3000
 CMD ["npm", "run", "dev"]
+
+# Production stage
+FROM node:18-alpine AS production
+
+WORKDIR /app
+COPY package*.json ./
+RUN npm install --production
+COPY . .
+
+EXPOSE 3000
+CMD ["npm", "start"]
