--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "Backend API server",
+  "type": "module",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
